--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 websockets==12.0
-playwright==1.41.0
-openai==1.10.0
+playwright>=1.40.0
+openai>=1.10.0
 python-dotenv==1.0.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
+pydantic>=2.9.0
+pydantic-settings>=2.1.0
