--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,7 @@ openai>=1.10.0
 python-dotenv==1.0.0
 pydantic>=2.9.0
 pydantic-settings>=2.1.0
+anthropic>=0.18.0
+httpx>=0.27.0
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
